--- a/config/projects.json
+++ b/config/projects.json
@@ -7,11 +7,11 @@
          }
      },
      "premodel": {
-          "params": ["currency", "date", "d_matrix", "pretictor", "target", "timestamp"],
+          "params": ["currency", "date", "d_matrix", "predictor", "target", "timestemp", "time_ahead"],
           "params_save": {
-               "1-set": {"indicator": "1-set", "date": "20211102", "d_matrix": "3", "variables": "1-set", "timestamp": "30"},
-               "2-set": {"indicator": "1-set", "date": "20211102", "d_matrix": "3", "variables": "2-set", "timestamp": "30"},
-               "3-set": {"indicator": "1-set", "date": "20211102", "d_matrix": "3", "variables": "3-set", "timestamp": "30"}
+               "1-set": {"indicator": "1-set", "date": "20211102", "d_matrix": "3", "variables": "1-set", "timestemp": "30", "time_ahead": "1"},
+               "2-set": {"indicator": "1-set", "date": "20211102", "d_matrix": "3", "variables": "1-set", "timestemp": "30", "time_ahead": "2"},
+               "3-set": {"indicator": "1-set", "date": "20211102", "d_matrix": "3", "variables": "1-set", "timestemp": "30", "time_ahead": "3"}
           }
      },
      "model": {
